# sansa

./: NOTICE  README.md  __init__.py  demo.ipynb  pyproject.toml  ruff.toml
datasets/: amazonbook.py  dataset.py  goodbooks10.py  movielens20.py  msd.py  netflix.py  split.py
evaluation/: evaluate.py  logs.py  metrics.py  pipeline.py  steps.py
examples/: demo.ipynb
experiments/accuracy/amazonbook/: console_logs_mrf.txt  console_logs_sansa.txt  results_summary.ipynb  run_experiment_mrf.py  run_experiment_sansa.py
experiments/accuracy/amazonbook/results/: MRF_2023-05-08_11-50-06.json  MRF_2023-05-08_11-53-40.json  SANSA_2023-05-08_11-26-54.json
experiments/accuracy/goodbooks10/: console_logs.txt  results_summary.ipynb  run_experiment.py
experiments/accuracy/goodbooks10/results/: EASE_2023-05-07_16-30-49.json  MRF_2023-05-07_16-30-55.json  MRF_2023-05-07_16-31-02.json  MRF_2023-05-07_16-31-10.json  MRF_2023-05-07_16-31-18.json  MRF_2023-05-07_16-31-26.json  MRF_2023-05-07_16-31-39.json  MRF_2023-05-07_16-31-52.json  MRF_2023-05-07_16-32-05.json  MRF_2023-05-07_16-32-33.json  SANSA_2023-05-07_16-32-48.json  SANSA_2023-05-07_16-33-03.json  SANSA_2023-05-07_16-33-17.json  SANSA_2023-05-07_16-33-34.json  SANSA_2023-05-07_16-33-56.json
experiments/accuracy/movielens20/: console_logs.txt  results_summary.ipynb  run_experiment.py
experiments/accuracy/movielens20/results/: EASE_2023-05-07_16-36-36.json  MRF_2023-05-07_16-37-05.json  MRF_2023-05-07_16-37-34.json  (+11 more)
experiments/accuracy/msd/: console_logs.txt  console_logs_sansa_icf.txt  results_summary.ipynb  run_experiment.py  run_experiment_sansa_icf.py
experiments/accuracy/netflix/: console_logs.txt  instance_info.txt  results_summary.ipynb  run_experiment.py
experiments/memory/amazonbook/: console_logs_mrf_0.txt  console_logs_mrf_0_5.txt  console_logs_sansa.txt  instance_info.txt  memory_profile_graphs.ipynb  run_experiment_mrf_0.py  run_experiment_mrf_0_5.py  run_experiment_sansa.py
experiments/sandbox/amazonbook/: run_experiment.py
experiments/sandbox/goodbooks10/: run_experiment.py
experiments/sandbox/movielens20/: run_experiment.py
experiments/sandbox/msd/: run_experiment.py
experiments/sandbox/netflix/: run_experiment.py
experiments/shorter_training/msd/: console_logs.txt  instance_info.txt  results.ipynb  run_experiment.py
models/: ease.py  model.py  mrf.py  sansa.py
sparseinv/: ainv.py  icf.py  ldlt.py  matmat.py  utils.py
src/sansa/: __init__.py  model.py
src/sansa/core/: __init__.py  factorizers.py  inverters.py
src/sansa/utils/: __init__.py  matmat.py  norms.py  scaling.py  sparsify.py  topk.py
tests/test_utils/: test_matmat.py  test_norms.py  test_scaling.py  test_sparsify.py
(+133 files in other folders)
